tests/syntax-error/invalid-binary-op.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g invalid-binary-op.silly -o %t.exe 2>&1 | %FileCheck %s
// This test is intentionally loose because Bison and ANTLR4 report slightly different locations/messages
// CHECK: invalid-binary-op.silly:10:{{[0-9]+}}: error: syntax error
// CHECK:    10 | x = y ^ z;  // Invalid binary operator
// CHECK:       |       {{ *}}^

FLOAT64 x;
FLOAT64 y;
x = y ^ z;  // Invalid binary operator
